# OpenBase

./: LICENSE  README.md
ROS/actuator/PID tuning/: relay.m  relay_trial.slx  relay_trial.slx.r2012b  step_PID.slx
ROS/actuator/estimation/: data raw.txt  data.txt  least_squares.m  loge.m  meta data.txt  prbs.m  visualization.wxm
ROS/open_base/: CMakeLists.txt  actuator identification input.txt  description.rviz  open_base_controller_plugin.xml  package.xml
ROS/open_base/config/: bypass.yaml  custom.yaml  joint_velocity.yaml
ROS/open_base/launch/: bypass controller.launch  custom controller.launch  gazebo controller.launch  gazebo description.launch  parameter.launch  rviz.launch  stand.launch  velocity controller test.launch  velocity controller.launch
ROS/open_base/mesh/: base.stl  rim.stl
ROS/open_base/msg/: Movement.msg  MovementBezier.msg  MovementGeneric.msg  Velocity.msg
ROS/open_base/script/: movement_generic_velocity_y.bagy  movement_generic_velocity_y.sh  movement_stop.bagy  movement_stop.sh
ROS/open_base/src/: custom_controller.cpp  kinematics.cpp  main.cpp  odometry.cpp
model/abstract/: body.stl  model.config  model.sdf
model/omni_wheel/: model.config  model.sdf  rim.stl  roller.stl
plugin/demo/: main.cc
plugin/main/: CMakeLists.txt  main.cc
plugin/template/: main.cc
tutorial/: NetBeans compilation.md  NetBeans compilation.txt  getting started.md  getting started.txt  make a new model (custom body, provided wheels).md  make a new model (custom body, provided wheels).txt  movement commands.md  movement commands.txt
world/: main.world
(+10 files in other folders)
